--- a/libs/components/package.json
+++ b/libs/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prizm-ui/components",
-  "version": "5.0.0",
+  "version": "5.0.0-rc.1",
   "description": "Prizm UI system design components library http://prizm.zyfra.com",
   "license": "MIT",
   "private": false,
@@ -17,10 +17,10 @@
     "@ng-web-apis/resize-observer": "^3.0.0",
     "@ng-web-apis/intersection-observer": "^3.0.0",
     "@ng-web-apis/mutation-observer": "^3.0.0",
-    "@prizm-ui/helpers": "^5.0.0",
-    "@prizm-ui/core": "^5.0.0",
-    "@prizm-ui/i18n": "^5.0.0",
-    "@prizm-ui/theme": "^5.0.0"
+    "@prizm-ui/helpers": "^5.0.0-rc.1",
+    "@prizm-ui/core": "^5.0.0-rc.1",
+    "@prizm-ui/i18n": "^5.0.0-rc.1",
+    "@prizm-ui/theme": "^5.0.0-rc.1"
   },
   "dependencies": {
     "tslib": "^2.3.0"
