--- a/local/package.json
+++ b/local/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@prizm-ui/local",
-  "version": "0.0.1",
+  "version": "5.0.0-rc.1",
   "dependencies": {
-    "@nx/devkit": "17.2.8",
+    "@nx/devkit": "19.5.6",
     "tslib": "^2.3.0"
   },
   "type": "commonjs",
