--- a/libs/charts/base/package.json
+++ b/libs/charts/base/package.json
@@ -11,10 +11,10 @@
     "@angular/common": "^18.1.3",
     "@angular/core": "^18.1.3",
     "@prizm-ui/theme": "^5.0.0",
-    "@prizm-ui/helpers": "^5.0.0",
-    "@antv/g2plot": "^2.4.31"
+    "@prizm-ui/helpers": "^5.0.0"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@antv/g2plot": "^2.4.31"
   }
 }
