--- a/libs/components/package.json
+++ b/libs/components/package.json
@@ -12,17 +12,17 @@
     "@angular/common": "^18.1.3",
     "@angular/core": "^18.1.3",
     "@angular/cdk": "^18.1.3",
-    "ngx-mask": "17.0.4",
-    "@ng-web-apis/common": "^3.0.0",
-    "@ng-web-apis/resize-observer": "^3.0.0",
-    "@ng-web-apis/intersection-observer": "^3.0.0",
-    "@ng-web-apis/mutation-observer": "^3.0.0",
     "@prizm-ui/helpers": "^5.0.0",
     "@prizm-ui/core": "^5.0.0",
     "@prizm-ui/i18n": "^5.0.0",
     "@prizm-ui/theme": "^5.0.0"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "ngx-mask": "17.0.4",
+    "@ng-web-apis/common": "^3.0.0",
+    "@ng-web-apis/resize-observer": "^3.0.0",
+    "@ng-web-apis/intersection-observer": "^3.0.0",
+    "@ng-web-apis/mutation-observer": "^3.0.0"
   }
 }
