feat(chore): update packages #000

--- a/libs/ast/package.json
+++ b/libs/ast/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prizm-ui/ast",
-  "version": "5.0.0-rc.1",
+  "version": "5.0.0",
   "private": false,
   "publishConfig": {
     "access": "public",
