--- a/libs/icons/base/package.json
+++ b/libs/icons/base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prizm-ui/icons",
-  "version": "5.0.0-rc.1",
+  "version": "5.0.0",
   "description": "Prizm UI base icon pack library http://prizm.zyfra.com",
   "private": false,
   "publishConfig": {
@@ -10,7 +10,7 @@
   "peerDependencies": {
     "@angular/common": "^18.1.3",
     "@angular/core": "^18.1.3",
-    "@prizm-ui/core": "^5.0.0-rc.1"
+    "@prizm-ui/core": "^5.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
