--- a/libs/theme/package.json
+++ b/libs/theme/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@prizm-ui/theme",
-  "version": "5.0.0-rc.1",
+  "version": "5.0.0",
   "peerDependencies": {
     "@angular/common": "^18.1.3",
     "@angular/core": "^18.1.3",
-    "@prizm-ui/core": "^5.0.0-rc.1",
-    "@prizm-ui/helpers": "^5.0.0-rc.1"
+    "@prizm-ui/core": "^5.0.0",
+    "@prizm-ui/helpers": "^5.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
