--- a/local/package.json
+++ b/local/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prizm-ui/local",
-  "version": "5.0.0-rc.1",
+  "version": "5.0.0",
   "dependencies": {
     "@nx/devkit": "19.5.6",
     "tslib": "^2.3.0"
