--- a/libs/nxmv/package.json
+++ b/libs/nxmv/package.json
@@ -7,6 +7,12 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
+  "dependencies": {
+    "tslib": "^2.3.0"
+  },
+  "devDependencies": {
+    "ejs": "^3.1.10"
+  },
   "generators": "./generators.json",
   "executors": "./executors.json"
 }
