--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "@yarnpkg/parsers": "~3.0.0-rc.27",
     "autoprefixer": "^10.4.0",
     "cypress": "^8.7.0",
+    "ejs": "^3.1.10",
     "es5-ext": "0.10.53",
     "es6-set": "0.1.5",
     "eslint": "8.57.0",
