--- a/.github/workflows/released.yml
+++ b/.github/workflows/released.yml
@@ -12,18 +12,17 @@ jobs:
     if: ${{ startsWith(github.event.release.tag_name, '4') }}
     uses: zyfra/Prizm/.github/workflows/main-publish-ng17.yml@main
     secrets: inherit
-
-  release_v3:
-    if: ${{ startsWith(github.event.release.tag_name, '3') }}
-    uses: zyfra/Prizm/.github/workflows/main-publish-ng16.yml@main
-    secrets: inherit
-
-  release_v2:
-    if: ${{ startsWith(github.event.release.tag_name, '2') }}
-    uses: zyfra/Prizm/.github/workflows/main-publish-ng15.yml@main
-    secrets: inherit
-
-  release_v1:
-    if: ${{ startsWith(github.event.release.tag_name, '1') }}
-    uses: zyfra/Prizm/.github/workflows/main-publish-ng14.yml@main
-    secrets: inherit
+#  release_v3:
+#    if: ${{ startsWith(github.event.release.tag_name, '3') }}
+#    uses: zyfra/Prizm/.github/workflows/main-publish-ng16.yml@main
+#    secrets: inherit
+#
+#  release_v2:
+#    if: ${{ startsWith(github.event.release.tag_name, '2') }}
+#    uses: zyfra/Prizm/.github/workflows/main-publish-ng15.yml@main
+#    secrets: inherit
+#
+#  release_v1:
+#    if: ${{ startsWith(github.event.release.tag_name, '1') }}
+#    uses: zyfra/Prizm/.github/workflows/main-publish-ng14.yml@main
+#    secrets: inherit
