--- a/.github/workflows/main-publish-ng15.yml
+++ b/.github/workflows/main-publish-ng15.yml
@@ -1,6 +1,9 @@
 # TODO: later change tag by input variable ${{ inputs.tag }}
 name: Publish main packages 15
 on:
+  push:
+    tags:
+      - '2.*'
   workflow_dispatch:
   workflow_call:
 env:
