--- a/.github/workflows/main-publish-ng16.yml
+++ b/.github/workflows/main-publish-ng16.yml
@@ -1,7 +1,7 @@
 # TODO: later change tag by input variable ${{ inputs.tag }}
 name: Publish main packages 16
 on:
-  create:
+  created:
     tags:
       - '3.*'
   workflow_dispatch:
