--- a/.github/workflows/main-publish-ng17.yml
+++ b/.github/workflows/main-publish-ng17.yml
@@ -1,7 +1,7 @@
 # TODO: later change tag by input variable ${{ inputs.tag }}
 name: Publish main packages 17
 on:
-  created:
+  create:
     tags:
       - '4.*'
   workflow_dispatch:
