--- a/.github/workflows/main-publish-ng14.yml
+++ b/.github/workflows/main-publish-ng14.yml
@@ -1,7 +1,7 @@
 # TODO: later change tag by input variable ${{ inputs.tag }}
 name: Publish main packages 14
 on:
-  create:
+  push:
     tags:
       - '1.*'
   workflow_dispatch:
