--- a/libs/components/package.json
+++ b/libs/components/package.json
@@ -15,7 +15,8 @@
     "@prizm-ui/helpers": "^4.3.8",
     "@prizm-ui/core": "^4.3.8",
     "@prizm-ui/i18n": "^4.3.8",
-    "@prizm-ui/theme": "^4.3.8"
+    "@prizm-ui/theme": "^4.3.8",
+    "@prizm-ui/icons": "^4.3.8"
   },
   "dependencies": {
     "tslib": "^2.4.0",
