fix(chore): recursive import errors #0

--- a/.github/workflows/main-publish-ng17.yml
+++ b/.github/workflows/main-publish-ng17.yml
@@ -167,7 +167,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/i18n && npm publish --access public --verbose
+      - run: cd dist/libs/i18n && npm publish --tag ng17  --access public --verbose
 
   publish-helpers:
     needs: build
@@ -195,7 +195,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/helpers && npm publish --access public --verbose
+      - run: cd dist/libs/helpers && npm publish --tag ng17  --access public --verbose
 
   publish-core:
     needs: build
@@ -223,7 +223,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/core && npm publish --access public --verbose
+      - run: cd dist/libs/core && npm publish --tag ng17  --access public --verbose
 
   publish-theme:
     needs: build
@@ -251,7 +251,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/theme && npm publish --access public --verbose
+      - run: cd dist/libs/theme && npm publish --tag ng17  --access public --verbose
 
   publish-icons:
     needs: build
@@ -279,7 +279,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/icons/base && npm publish --access public --verbose
+      - run: cd dist/libs/icons/base && npm publish --tag ng17  --access public --verbose
 
   publish-icons-loader:
     needs: build
@@ -307,7 +307,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/icons/loader && npm publish --access public --verbose
+      - run: cd dist/libs/icons/loader && npm publish --tag ng17  --access public --verbose
 
   publish-flags:
     needs: build
@@ -335,7 +335,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/icons/flags && npm publish --access public --verbose
+      - run: cd dist/libs/icons/flags && npm publish --tag ng17  --access public --verbose
 
   publish-plugin:
     needs: build
@@ -363,7 +363,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/plugin && npm publish --access public --verbose
+      - run: cd dist/libs/plugin && npm publish --tag ng17  --access public --verbose
 
   publish-ast:
     needs: build
@@ -391,7 +391,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/ast && npm publish --access public --verbose
+      - run: cd dist/libs/ast && npm publish --tag ng17  --access public --verbose
 
   publish-charts:
     needs: build
@@ -419,7 +419,7 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/charts && npm publish --access public --verbose
+      - run: cd dist/libs/charts && npm publish --tag ng17  --access public --verbose
 
   publish-nxmv:
     needs: build
@@ -447,4 +447,4 @@ jobs:
           name: dist
           path: ./dist
 
-      - run: cd dist/libs/nxmv && npm publish --access public --verbose
+      - run: cd dist/libs/nxmv && npm publish --tag ng17  --access public --verbose
