--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,7 @@
     "strictPropertyInitialization": true,
     "baseUrl": ".",
     "paths": {
+      "@prizm-ui/addon-query-builder": ["libs/addons/query-builder/src/index.ts"],
       "@prizm-ui/ast": ["libs/ast/src/index.ts"],
       "@prizm-ui/ast/cb3-code-examples": ["libs/ast/cb3-code-examples/src/index.ts"],
       "@prizm-ui/ast/cb3-template-examples": ["libs/ast/cb3-template-examples/src/index.ts"],
