--- a/libs/schematics/package.json
+++ b/libs/schematics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prizm-ui/install",
-  "version": "5.3.0",
+  "version": "5.3.1-next.1",
   "description": "Package installer @prizm-ui/* , Angular schematic ng-add",
   "schematics": "./src/collection.json",
   "private": false,
