--- a/libs/theme/package.json
+++ b/libs/theme/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@prizm-ui/theme",
-  "version": "5.3.0",
+  "version": "5.3.1-next.1",
   "peerDependencies": {
     "@angular/common": "^18.1.3",
     "@angular/core": "^18.1.3",
-    "@prizm-ui/core": "^5.3.0",
-    "@prizm-ui/helpers": "^5.3.0"
+    "@prizm-ui/core": "^5.3.1-next.1",
+    "@prizm-ui/helpers": "^5.3.1-next.1"
   },
   "dependencies": {
     "tslib": "^2.3.0"
