--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prizm-ui/sdk",
-  "version": "5.3.1-next.1",
+  "version": "5.3.1",
   "license": "MIT",
   "husky": {
     "hooks": {
