--- a/libs/addons/query-builder/package.json
+++ b/libs/addons/query-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prizm-ui/addon-query-builder",
-  "version": "5.3.1",
+  "version": "5.3.2-next.3",
   "peerDependencies": {
     "@angular/common": "^18.1.3",
     "@angular/core": "^18.1.3",
