--- a/libs/charts/base/package.json
+++ b/libs/charts/base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prizm-ui/charts",
-  "version": "5.3.1",
+  "version": "5.3.2-next.3",
   "license": "MIT",
   "private": false,
   "publishConfig": {
@@ -10,8 +10,8 @@
   "peerDependencies": {
     "@angular/common": "^18.1.3",
     "@angular/core": "^18.1.3",
-    "@prizm-ui/theme": "^5.3.1",
-    "@prizm-ui/helpers": "^5.3.1"
+    "@prizm-ui/theme": "^5.3.2-next.3",
+    "@prizm-ui/helpers": "^5.3.2-next.3"
   },
   "dependencies": {
     "tslib": "^2.3.0",
