--- a/libs/nxmv/package.json
+++ b/libs/nxmv/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prizm-ui/nx-mv",
-  "version": "5.3.1",
+  "version": "5.3.2-next.3",
   "main": "src/index.js",
   "private": false,
   "publishConfig": {
