--- a/libs/helpers/package.json
+++ b/libs/helpers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prizm-ui/helpers",
-  "version": "5.3.2-next.3",
+  "version": "5.3.2",
   "license": "MIT",
   "description": "Library to make it easy to create Angular applications. Contains Injectables Service, RxJS utilities, directives, and standard pipes.",
   "private": false,
