--- a/libs/icons/loader/package.json
+++ b/libs/icons/loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prizm-ui/icons-loader",
-  "version": "5.3.2-next.3",
+  "version": "5.3.2",
   "private": false,
   "publishConfig": {
     "access": "public",
@@ -9,7 +9,7 @@
   "peerDependencies": {
     "@angular/common": "^18.1.3",
     "@angular/core": "^18.1.3",
-    "@prizm-ui/icons": "^5.3.2-next.3"
+    "@prizm-ui/icons": "^5.3.2"
   },
   "dependencies": {
     "tslib": "^2.3.0"
