--- a/libs/theme/package.json
+++ b/libs/theme/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@prizm-ui/theme",
-  "version": "5.3.2-next.3",
+  "version": "5.3.2",
   "peerDependencies": {
     "@angular/common": "^18.1.3",
     "@angular/core": "^18.1.3",
-    "@prizm-ui/core": "^5.3.2-next.3",
-    "@prizm-ui/helpers": "^5.3.2-next.3"
+    "@prizm-ui/core": "^5.3.2",
+    "@prizm-ui/helpers": "^5.3.2"
   },
   "dependencies": {
     "tslib": "^2.3.0"
