fix(ci): after published v4 main demo update instead v4 #0

--- a/.github/workflows/main-publish-ng17.yml
+++ b/.github/workflows/main-publish-ng17.yml
@@ -111,7 +111,7 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PRIZMUI }}'
           projectId: prizmui
           channelId: live
-          target: main
+          target: v4
 
   publish-components:
     needs: build
