--- a/.github/workflows/deploy-main-doc-ng18.yml
+++ b/.github/workflows/deploy-main-doc-ng18.yml
@@ -1,5 +1,5 @@
 # TODO: later change tag by input variable ${{ inputs.tag }}
-name: Deploy doc main 18 (v5 and main)
+name: Deploy doc main 18 (v5)
 on:
   workflow_dispatch:
   workflow_call:
@@ -90,15 +90,6 @@ jobs:
 
       - name: 'Build doc app for firebase hosting'
         run: npm run build:doc
-
-      - name: Deploy doc to firebase (v4)
-        uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PRIZMUI }}'
-          projectId: prizmui
-          channelId: live
-          target: v4
 
       - name: Deploy doc to firebase (main)
         uses: FirebaseExtended/action-hosting-deploy@v0
