--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "@nx/node": "19.5.6",
     "@nx/plugin": "19.5.6",
     "@nx/workspace": "19.5.6",
-    "@prizm-ui/nx-mv": "^4.0.1-next.1",
+    "@prizm-ui/nx-mv": "^5.1.0",
     "@schematics/angular": "18.1.3",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "0.3.12",
