--- a/.github/workflows/main-publish-ng18.yml
+++ b/.github/workflows/main-publish-ng18.yml
@@ -134,6 +134,34 @@ jobs:
 
       - run: cd dist/libs/components && npm publish --access public --verbose
 
+  publish-addon-query-builder:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Restore node_modules in cache
+        uses: actions/cache/restore@v3
+        with:
+          path: ./node_modules
+          key: ${{ runner.os }}-node_modules_ng_18-${{ hashFiles('package-lock.json.ng18') }}
+          restore-keys: |
+            ${{ runner.os }}-node_modules_ng_18-
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Download dist from artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: ./dist
+
+      - run: cd dist/libs/addons/query-builder && npm publish --access public --verbose
+
   publish-i18n:
     needs: build
     runs-on: ubuntu-latest
