--- a/nxmv.json
+++ b/nxmv.json
@@ -35,8 +35,10 @@
       "remove": ["angular.json"],
       "consts": {
         "ngVersion": "18.1.3",
-        "nxVersion": "19.5.6",
-        "version": "5.3.3",
+        "nxVersion": "19.5.6"
+      },
+      "vars": {
+        "version": "5.4.0",
         "v4version": "4.8.0"
       }
     }
