--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prizm-ui/sdk",
-  "version": "4.8.0",
+  "version": "4.8.1",
   "license": "MIT",
   "husky": {
     "hooks": {
@@ -110,17 +110,17 @@
     "@nx/node": "17.2.8",
     "@nx/plugin": "17.2.8",
     "@nx/workspace": "17.2.8",
-    "@prizm-ui/nx-mv": "^5.0.0-rc.1",
+    "@prizm-ui/nx-mv": "^5.4.0",
     "@schematics/angular": "17.0.10",
     "@swc-node/register": "1.6.8",
     "@swc/cli": "~0.1.62",
     "@swc/core": "1.3.104",
-    "@taiga-ui/addon-doc": "^3.100.0",
-    "@taiga-ui/addon-mobile": "^3.100.0",
-    "@taiga-ui/cdk": "^3.100.0",
-    "@taiga-ui/core": "^3.100.0",
-    "@taiga-ui/icons": "^3.100.0",
-    "@taiga-ui/kit": "^3.100.0",
+    "@taiga-ui/addon-doc": "^3.69.0",
+    "@taiga-ui/addon-mobile": "^3.69.0",
+    "@taiga-ui/cdk": "^3.69.0",
+    "@taiga-ui/core": "^3.69.0",
+    "@taiga-ui/icons": "^3.69.0",
+    "@taiga-ui/kit": "^3.69.0",
     "@types/dompurify": "^2.3.3",
     "@types/jest": "29.4.4",
     "@types/lodash": "^4.14.191",
