--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@prizm-ui/sdk",
-  "version": "5.3.3",
+  "version": "5.5.0",
   "license": "MIT",
   "husky": {
     "hooks": {
@@ -99,6 +99,7 @@
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
     "@commitlint/prompt-cli": "^19.2.2",
+    "@nikolastojicic/prettier-plugin-organize-attributes": "^0.1.0",
     "@nrwl/eslint-plugin-nx": "19.5.6",
     "@nx/cypress": "19.5.6",
     "@nx/devkit": "19.5.6",
@@ -160,8 +161,8 @@
     "postcss-import": "14.1.0",
     "postcss-preset-env": "7.5.0",
     "postcss-url": "10.1.3",
-    "prettier": "^3.4.2",
-    "pretty-quick": "^4.0.0",
+    "prettier": "2.8.8",
+    "pretty-quick": "^3.1.3",
     "raw-loader": "^4.0.2",
     "svg-to-ts": "^8.9.0",
     "svgtofont": "^4.1.1",
