fix(chore): stackblitz version for v5 #0

--- a/apps/doc/src/app/code-demo/files/src/app/shared.module.ts.template
+++ b/apps/doc/src/app/code-demo/files/src/app/shared.module.ts.template
@@ -1,5 +1,5 @@
 import { NgModule } from '@angular/core';
-import { PrizmIconsComponent, PrizmIconsFullComponent, PrizmIconsSvgComponent } from '@prizm-ui/icons';
+import { PrizmIconsComponent, PrizmIconsFullComponent } from '@prizm-ui/icons';
 import {
   PrizmAccordionModule,
   PrizmBreadcrumbsModule,
@@ -14,14 +14,14 @@ import {
   PrizmCounterComponent,
   PrizmCronHumanReadablePipe,
   PrizmCronModule,
-  PrizmDataListModule,
+  PrizmDataListModule, PrizmDataListWrapperComponent,
   PrizmDialogComponent,
   PrizmDialogConfirmComponent,
   PrizmDropdownHostModule,
   PrizmErrorPageComponent,
   PrizmFileUploadComponent,
   PrizmGridModule,
-  PrizmHintDirective,
+  PrizmHintDirective, PrizmHintOnOverflowDirective,
   PrizmIndicatorComponent,
   PrizmInputCarouselModule,
   PrizmInputDateMultiComponent,
@@ -39,6 +39,9 @@ import {
   PrizmInputPasswordModule,
   PrizmInputSelectModule,
   PrizmInputTextModule,
+  PrizmInputTreeMultiSelectCheckboxDirective,
+  PrizmInputTreeMultiSelectComponent,
+  PrizmInputTreeSelectComponent,
   PrizmListingItemComponent,
   PrizmLoaderComponent,
   PrizmMaskModule,
@@ -63,7 +66,12 @@ import {
   PrizmToggleComponent,
   PrizmTooltipModule,
   PrizmTreeModule,
-  PrizmWidgetModule,
+  PrizmTreeMultiSelectItemComponent,
+  PrizmTreeMultiSelectItemDirective,
+  PrizmTreeMultiSelectModeDirective,
+  PrizmTreeSelectItemComponent,
+  PrizmTreeSelectItemDirective,
+  PrizmWidgetComponent,
 } from '@prizm-ui/components';
 import {
   PrizmChartsAreaComponent,
@@ -92,6 +100,18 @@ import { PrizmFlagIconsComponent } from '@prizm-ui/flag-icons';
     // for full variant
     PrizmIconsFullComponent,
 
+
+    PrizmDataListWrapperComponent,
+    PrizmTreeMultiSelectModeDirective,
+    PrizmTreeMultiSelectItemDirective,
+    PrizmTreeMultiSelectItemComponent,
+    PrizmInputTreeMultiSelectCheckboxDirective,
+    PrizmInputTreeMultiSelectComponent,
+
+    PrizmTreeSelectItemDirective,
+    PrizmTreeSelectItemComponent,
+    PrizmInputTreeSelectComponent,
+
     PrizmButtonComponent,
     PrizmAccordionModule,
     PrizmBreadcrumbsModule,
@@ -111,7 +131,7 @@ import { PrizmFlagIconsComponent } from '@prizm-ui/flag-icons';
     PrizmFileUploadComponent,
     PrizmGridModule,
     PrizmHintDirective,
-    PrizmIconsSvgComponent,
+    PrizmHintOnOverflowDirective,
     PrizmIndicatorComponent,
     PrizmInputMultiSelectModule,
     PrizmInputLayoutDateTimeComponent,
@@ -151,7 +171,7 @@ import { PrizmFlagIconsComponent } from '@prizm-ui/flag-icons';
     PrizmToggleComponent,
     PrizmTooltipModule,
     PrizmTreeModule,
-    PrizmWidgetModule,
+    PrizmWidgetComponent,
     PrizmCounterComponent,
 
     // CHARTS
@@ -174,11 +194,22 @@ import { PrizmFlagIconsComponent } from '@prizm-ui/flag-icons';
     PrizmDataListModule,
 
     PrizmIfLanguageDirective,
-    PrizmIconsSvgComponent,
     // for base variant
     PrizmIconsComponent,
     // for full variant
     PrizmIconsFullComponent,
+
+    PrizmDataListWrapperComponent,
+
+    PrizmTreeMultiSelectModeDirective,
+    PrizmTreeMultiSelectItemDirective,
+    PrizmTreeMultiSelectItemComponent,
+    PrizmInputTreeMultiSelectCheckboxDirective,
+    PrizmInputTreeMultiSelectComponent,
+
+    PrizmTreeSelectItemDirective,
+    PrizmTreeSelectItemComponent,
+    PrizmInputTreeSelectComponent,
 
     PrizmButtonComponent,
     PrizmAccordionModule,
@@ -199,6 +230,7 @@ import { PrizmFlagIconsComponent } from '@prizm-ui/flag-icons';
     PrizmFileUploadComponent,
     PrizmGridModule,
     PrizmHintDirective,
+    PrizmHintOnOverflowDirective,
     PrizmIndicatorComponent,
     PrizmInputMultiSelectModule,
     PrizmInputLayoutDateTimeComponent,
@@ -238,7 +270,7 @@ import { PrizmFlagIconsComponent } from '@prizm-ui/flag-icons';
     PrizmToggleComponent,
     PrizmTooltipModule,
     PrizmTreeModule,
-    PrizmWidgetModule,
+    PrizmWidgetComponent,
 
     // CHARTS
     PrizmChartsAreaComponent,
