--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,11 +86,12 @@ Build library:
   #     - node_modules/.cache/nx
   image: $ZUI_BUILD_IMAGE_NAME:$ZUI_BUILD_IMAGE_TAG
   script:
-    - cat ${NPMRC_CONFIG} > .npmrc
-    - echo "_auth=$NPM_AUTH_TOKEN" >> .npmrc
-    - cp .npmrc ~/
-    - npm --userconfig ~/.npmrc install && npm --userconfig ~/.npmrc run all
-    - npm --userconfig ~/.npmrc install && npm --userconfig ~/.npmrc run build:doc
+    # - cat ${NPMRC_CONFIG} > .npmrc
+    # - echo "_auth=$NPM_AUTH_TOKEN" >> .npmrc
+    # - cp .npmrc ~/
+    - npm install && npm  run all
+    - npm run all
+    - npm run build:doc
   artifacts:
     expire_in: 1 day
     paths:
