--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cypress:open": "cypress open",
     "start": "nx run doc:serve",
     "build": "nx affected:build --all",
+    "build:all": "nx run-many -t build --all",
     "build:next": "nx run doc:build",
     "build:doc": "nx run doc:build:development --deployUrl=/ --baseHref=/",
     "build:stats": "nx build next --stats-json",
